--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,19 @@ build-backend = "maturin"
 
 [project]
 name = "pyxelxl"
-requires-python = ">=3.8"
+description = "Bitmap fonts, and in the future more for Pyxel."
+authors = [
+    {name = "RuneBlaze", email = "runeblaze@protonmail.com"}
+]
+
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+dependencies = ["pyxel >= 2.0.0", "numpy ~= 1.25.0"]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
