--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pyxelxl"
-version = "0.0.9"
+version = "0.0.10"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,5 @@ numpy = "0.21.0"
 palette = "0.7.6"
 parking_lot = "0.12.3"
 pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module", "gil-refs", "anyhow"] }
+strum = "0.26"
+strum_macros = "0.26"
