--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pyxelxl"
-version = "0.0.10"
+version = "0.0.11"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,5 +16,6 @@ numpy = "0.21.0"
 palette = "0.7.6"
 parking_lot = "0.12.3"
 pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module", "gil-refs", "anyhow"] }
+rotsprite = "0.1.4"
 strum = "0.26"
 strum_macros = "0.26"
